cabal-version: >= 1.10

name: demo
version: 0

build-type: Simple

executable demo-text-editor-brick
    build-depends:
        base,
        brick,
        ron,
        ron-rdt,
        ron-storage,
        text,
        text-zipper,
        vty
    default-language: Haskell2010
    ghc-options: -threaded
    hs-source-dirs: text-editor-brick
    main-is: Main.hs
    other-modules: Types

-- executable demo-text-editor-qt
