cabal-version: 2.2

name: examples
version: 0
build-type: Simple

common common
    build-depends:
        -- global
        base,
        text,
        -- project
        ron,
        ron-rdt
    default-language: Haskell2010

executable TypicalUsage
    import: common
    build-depends: ron-schema, ron-storage
    main-is: TypicalUsage.hs

executable CreateAndModify
    import: common
    build-depends: mtl, pretty-simple
    main-is: CreateAndModify.hs
