cabal-version:      2.2
name:               ron-rdt
version:            0.10
bug-reports:        https://github.com/ff-notes/ron/issues
category:           Distributed Systems, Protocol, Database
copyright:          2018-2019 Yuriy Syrovetskiy
homepage:           https://github.com/ff-notes/ron
license:            BSD-3-Clause
license-file:       LICENSE
maintainer:         Yuriy Syrovetskiy <haskell@cblp.su>
synopsis:           Replicated Data Types (RON-RDT)
description:
  Replicated Object Notation (RON), data types (RDT), and RON-Schema
  .
  Examples: https://github.com/ff-notes/ron/tree/master/examples

build-type:         Simple
extra-source-files: CHANGELOG.md

common language
  build-depends:      base >=4.10
  default-extensions:
    NoImplicitPrelude
    StrictData

  default-language:   GHC2021

library
  import:          language

  -- global
  build-depends:
    , bytestring
    , containers
    , Diff
    , directory
    , filelock
    , filepath
    , generic-lens
    , hashable
    , lens
    , mtl
    , network-info
    , stm
    , text
    , tf-random
    , time
    , unordered-containers

  -- project
  build-depends:   ron >=0.9
  exposed-modules:
    RON.Data
    RON.Data.CT
    RON.Data.GTree
    RON.Data.LWW
    RON.Data.ORSet
    RON.Data.RGA
    RON.Data.Time
    RON.Data.VersionVector
    RON.Experimental.Data
    RON.Experimental.Data.ORSet
    RON.Experimental.Data.ORSet.Type
    RON.Store
    RON.Store.Class
    RON.Store.FS
    RON.Store.Test

  other-modules:   RON.Data.Internal
  hs-source-dirs:  lib
