cabal-version: 2.2

name: ron-store-sqlite
version: 0

build-type: Simple

library
  build-depends:
    -- global
    base,
    bytestring,
    monad-logger,
    persistent-sqlite,
    persistent,
    resource-pool,
    resourcet,
    stm,
    text,
    tf-random,
    unliftio,
    -- project
    ron,
    ron-rdt,
  default-language: Haskell2010
  exposed-modules: RON.Store.Sqlite
