cabal-version:  2.2

name:           ron-test
version:        0

common language
    build-depends: base >= 4.10 && < 4.13, integer-gmp
    default-extensions: MonadFailDesugaring NoImplicitPrelude StrictData
    default-language: Haskell2010

library
    import: language
    build-depends:
        -- global
        data-default,
        hedgehog,
        mtl,
        text,
        -- project
        ron,
        ron-rdt,
        ron-schema
    exposed-modules:
        Gen
        LwwStruct.Types
        Orphans
        StructSet.Types
    hs-source-dirs: lib

test-suite common
    import: language
    build-depends:
        -- global
        bytestring,
        containers,
        directory,
        directory-tree,
        extra,
        filepath,
        hedgehog,
        syb,
        tasty,
        tasty-hedgehog,
        tasty-hunit,
        -- project
        ron,
        ron-rdt
    hs-source-dirs: .
    main-is: Common.hs
    type: exitcode-stdio-1.0

test-suite test
    import: language
    build-depends:
        -- global
        bytestring,
        data-default,
        directory,
        hedgehog,
        interpolate,
        mtl,
        tasty-hedgehog,
        tasty-th,
        text,
        -- project
        ron,
        ron-rdt,
        ron-schema,
        -- package
        ron-test
    hs-source-dirs: .
    main-is: Main.hs
    other-modules:
        HexDump
        LwwStruct
        ORSet
        StructSet
        Types
    type: exitcode-stdio-1.0

executable words
    import: language
    build-depends:
        -- global
        mtl,
        text,
        text-metrics,
        unordered-containers,
        -- project
        ron,
        ron-rdt
    hs-source-dirs: .
    main-is: Words.hs
