cabal-version:  2.2

name:           ron-test
version:        0

flag style
    description: Enable style check
    default: False
    manual: True

common language
    build-depends: base >= 4.10
    default-extensions: NoImplicitPrelude StrictData
    default-language: Haskell2010

library
    import: language
    build-depends:
        -- global
        data-default,
        hedgehog,
        -- project
        ron,
        ron-rdt,
        ron-schema
    exposed-modules:
        Gen
        LwwStruct.Types
        Orphans
        StructSet.Types
    hs-source-dirs: lib

test-suite common
    import: language
    build-depends:
        -- global
        bytestring,
        containers,
        directory,
        directory-tree,
        extra,
        filepath,
        hedgehog,
        syb,
        tasty,
        tasty-hedgehog,
        tasty-hunit,
        -- project
        ron,
        ron-rdt
    hs-source-dirs: .
    main-is: Common.hs
    type: exitcode-stdio-1.0

test-suite test
    import: language
    build-depends:
        -- global
        bytestring,
        containers,
        data-default,
        directory,
        hedgehog >= 1,
        lens,
        tasty-hedgehog,
        tasty-th,
        template-haskell,
        text,
        -- project
        ron,
        ron-rdt,
        ron-schema,
        -- package
        ron-test
    hs-source-dirs: .
    main-is: Main.hs
    other-modules:
        HexDump
        LwwStruct
        ORSet
        String
        StructSet
        Types
    type: exitcode-stdio-1.0

executable words
    import: language
    build-depends:
        -- global
        text,
        text-metrics,
        unordered-containers,
        -- project
        ron,
        ron-rdt
    hs-source-dirs: .
    main-is: Words.hs

test-suite style
    import: language
    if flag(style)
        buildable: True
    else
        buildable: False
    build-depends:
        -- global
        bytestring,
        directory,
        extra,
        filepath,
        text,
        typed-process,
        -- project
        ron,
    type: exitcode-stdio-1.0
    main-is: Style.hs
