cabal-version: 2.2

name: ron-tool
version: 0

executable ron
    build-depends:
        -- global
        aeson,
        aeson-pretty,
        base,
        bytestring,
        directory,
        optparse-applicative,
        yaml,
        -- project
        ron,
        ron-rdt,
    default-language: Haskell2010
    main-is: Main.hs
