cabal-version:  2.2

name:           ron
version:        0.10

bug-reports:    https://github.com/ff-notes/ron/issues
category:       Distributed Systems, Protocol, Database
copyright:      2018-2019 Yuriy Syrovetskiy
homepage:       https://github.com/ff-notes/ron
license:        BSD-3-Clause
license-file:   LICENSE
maintainer:     Yuriy Syrovetskiy <haskell@cblp.su>
synopsis:       RON

description:
    Replicated Object Notation (RON), data types (RDT), and RON-Schema
    .
    Examples: https://github.com/ff-notes/ron/tree/master/examples

build-type:     Simple

extra-source-files:
    CHANGELOG.md

common language
    build-depends: base >= 4.10 && < 4.13, integer-gmp
    default-extensions: MonadFailDesugaring NoImplicitPrelude StrictData
    default-language: Haskell2010

library
    import: language
    build-depends:
        aeson,
        attoparsec,
        binary,
        bytestring,
        containers,
        hashable,
        mtl,
        scientific,
        template-haskell,
        text,
        time,
        -- transformers >= 0.5.6.0,
            -- ^ TODO Writer.CPS
        unordered-containers
    exposed-modules:
        RON.Base64
        RON.Binary
        RON.Binary.Parse
        RON.Binary.Serialize
        RON.Binary.Types
        RON.Epoch
        RON.Error
        RON.Event
        RON.Event.Simulation
        RON.Prelude
        RON.Semilattice
        RON.Text
        RON.Text.Parse
        RON.Text.Serialize
        RON.Text.Serialize.UUID
        RON.Types
        RON.Util
        RON.Util.Word
        RON.UUID
    other-modules:
        Attoparsec.Extra
        Data.ZigZag
        -- TODO RON.Prelude.Writer
    hs-source-dirs: lib

benchmark bench
    import: language
    build-depends:
        -- global
        criterion,
        deepseq,
        -- package
        ron
    main-is: Main.hs
    hs-source-dirs: bench
    type: exitcode-stdio-1.0
