cabal-version: 2.2

name:           swarm
version:        0

category:       Distributed Systems, Database
license:        BSD-3-Clause
maintainer:     Yuriy Syrovetskiy <haskell@cblp.su>
synopsis:       SwarmDB connector

description:
    Haskell binding to the embedded distributed database SwarmDB
    http://replicated.cc/swarm/

build-type: Simple

common language
    build-depends: base >= 4.10 && < 4.13
    default-language: Haskell2010

library
    import: language
    build-depends:
        -- global
        bytestring,
        containers,
        inline-c,
        inline-c-cpp,
        -- project
        ron,
    include-dirs:
        _artifacts/include
        /usr/include/botan-2
    exposed-modules:
        Swarm.DB.Replica
        Swarm.RON.Status
        Swarm.RON.Text
    extra-libraries: stdc++ swarmdb
    hs-source-dirs: lib

executable swarm
    import: language
    build-depends:
        -- project
        ron,
        -- package
        swarm,
    ghc-options: -dynamic
    hs-source-dirs: exe
    main-is: Main.hs
