cabal-version: 2.2

name:           swarm
version:        0

category:       Distributed Systems, Database
license:        BSD-3-Clause
maintainer:     Yuriy Syrovetskiy <haskell@cblp.su>
synopsis:       SwarmDB connector

description:
    Haskell binding to the embedded distributed database SwarmDB
    http://replicated.cc/swarm/

build-type: Simple

common language
    build-depends: base >= 4.10 && < 4.13
    default-language: Haskell2010

library
    import: language
    build-depends:
        -- global
        bytestring,
        containers,
        inline-c,
        inline-c-cpp,
        -- project
        ron,
    ghc-options: -optc=-std=c++11

    include-dirs: _artifacts/include
    if os(linux)
        include-dirs:
            /usr/include/botan-2
    if os(osx)
        include-dirs:
            /usr/local/opt/botan/include/botan-2
            /usr/local/opt/rocksdb/include

    exposed-modules:
        Swarm.DB.Replica
        Swarm.RON.Status
        Swarm.RON.Text
    extra-libraries: stdc++ swarmdb
    hs-source-dirs: lib
    other-modules:
        Cxx.Std
        Cxx.Std.String

executable swarm
    import: language
    build-depends:
        -- project
        ron,
        -- package
        swarm,
    ghc-options: -dynamic
    hs-source-dirs: exe
    main-is: Main.hs

test-suite test
    import: language
    hs-source-dirs: test
    main-is: Main.hs
    type: exitcode-stdio-1.0
