cabal-version: 2.2

name: chat
version: 0

build-type: Simple

executable chat
    build-depends:
        -- global
        aeson,
        base,
        brick,
        extra,
        generic-lens,
        lens,
        optparse-applicative,
        pretty-simple,
        safe-exceptions,
        stm,
        text,
        time,
        unix,
        vty,
        websockets,
        -- project
        ron,
        ron-rdt,
    default-extensions:
        ApplicativeDo
        DeriveAnyClass
        DeriveGeneric
        DerivingStrategies
        DisambiguateRecordFields
        DuplicateRecordFields
        EmptyCase
        FlexibleContexts
        LambdaCase
        NamedFieldPuns
        NumericUnderscores
        OverloadedLabels
        OverloadedStrings
        RecordWildCards
        ScopedTypeVariables
        TypeApplications
        TypeFamilies
    default-language: Haskell2010
    ghc-options: -threaded -dynamic -rtsopts -with-rtsopts=-N
    main-is: Main.hs
    other-modules:
        Database
        Fork
        NetNode
        Options
        Types
        UI
