cabal-version: 2.2
name:          chat
version:       0
build-type:    Simple

executable chat
  -- global
  build-depends:
    , aeson
    , base
    , brick
    , generic-lens
    , microlens
    , microlens-mtl
    , monad-logger
    , network-uri
    , optparse-applicative
    , pretty-simple
    , stm
    , text
    , time
    , unliftio
    , vty
    , websockets

  -- project
  build-depends:
    , ron
    , ron-rdt
    , ron-store-sqlite

  default-extensions:
    ApplicativeDo
    BlockArguments
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DisambiguateRecordFields
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    ImportQualifiedPost
    LambdaCase
    NamedFieldPuns
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TemplateHaskell
    TypeApplications
    TypeFamilies

  default-language:   Haskell2010

  -- TODO -dynamic
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  main-is:            Main.hs
  other-modules:
    Database
    Fork
    NetNode
    Options
    Types
    UI
