cabal-version: 2.2

name: garden
version: 0

build-type: Simple

executable garden
  build-depends:
    aeson,
    async,
    base,
    bytestring,
    containers,
    monad-logger,
    network-uri,
    optparse-applicative,
    ron-rdt,
    ron-store-sqlite,
    ron,
    stm,
    text,
    tree-view,
    unliftio,
    websockets,
  default-extensions:
    ApplicativeDo
    BlockArguments
    EmptyCase
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    RankNTypes
    ScopedTypeVariables
    TemplateHaskell
  default-language: Haskell2010
  main-is: Main.hs
  other-modules: Fork NetNode Options
