cabal-version: 2.2

name: garden
version: 0

build-type: Simple

executable garden
  build-depends:
    aeson,
    async,
    base,
    bytestring,
    containers,
    gloss,
    monad-logger,
    mtl,
    network-uri,
    optparse-applicative,
    ron-rdt,
    ron-store-sqlite,
    ron,
    stm,
    text,
    tree-view,
    unliftio,
    websockets,
  default-extensions:
    ApplicativeDo
    BlockArguments
    EmptyCase
    FlexibleContexts
    ImportQualifiedPost
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    ParallelListComp
    RankNTypes
    ScopedTypeVariables
    StrictData
    TemplateHaskell
    ViewPatterns
  default-language: Haskell2010
  ghc-options: -O2 -threaded -rtsopts -with-rtsopts=-N
  main-is: Main.hs
  other-modules: Database Fork NetNode Options UI
