cabal-version: 2.2

name: editor-qt
version: 0

build-type: Simple

common language
    build-depends: base
    default-language: Haskell2010
    ghc-options: -threaded

executable editor-qt
    import: language
    buildable: False
    build-depends:
        -- global
        containers,
        -- hoppy-runtime,
        -- qtah,
        stm,
        text,
        time,
        -- project
        ron-rdt,
        ron-storage,
    ghc-options: -dynamic -rtsopts -with-rtsopts=-N
    hs-source-dirs: text-editor-qt
    main-is: Main.hs
